--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,14 @@
 {
-  "name": "crocos/cloudinary-twig-extension",
+  "name": "teraone/cloudinary-twig-extension",
   "description": "cloudinary twig extension",
   "license": "MIT",
   "authors": [
+    {
+      "name": "Stefan Gotre",
+      "email": "gotre@teraone.de",
+      "homepage": "https://teraone.de",
+      "role": "Developer"
+    },
     {
       "name": "Keisuke SATO",
       "email": "sato@crocos.co.jp",
@@ -10,18 +16,16 @@
       "role": "Developer"
     }
   ],
-  "version": "1.0.0",
+  "version": "0.1",
   "autoload": {
-    "psr-0": {"Cloudinary\\Twig": "lib/"}
+    "psr-0": {"Teraone\\Twig": "lib/"}
   },
   "require": {
-    "crocos/cloudinary": "dev-develop",
+    "cloudinary/cloudinary_php": "dev-master",
     "twig/twig": "1.*"
   },
-  "repositories": [
-    {
-      "type": "vcs",
-      "url": "https://github.com/riaf/cloudinary_php"
-    }
-  ]
+  "require-dev": {
+    "phpunit/phpunit": "4.7"
+  }
+
 }
